--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,6 @@ jobs:
       - name: Publish coverage to CodeClimate
         uses: paambaati/codeclimate-action@v3.0.0
         env:
-          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          CC_TEST_REPORTER_ID: 7bc2ff765ac0619975d32fe57959db6374d14a96780a1438ec68ea14036748e1
         with:
           coverageLocations: ${{github.workspace}}/coverage/lcov.info:lcov
