Install requirements before building docs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Build docs/
         run: |
+          pip install -r docs/requirements.txt
           npm run docs
 
       - name: Test
