Fix pip install cmd

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Build docs/
         run: |
-          pip install -r docs/requirements.txt
+          pip install -r sphinx/requirements.txt
           npm run docs
 
       - name: Test
